# dns-rebinder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: clippy.yml  rust.yml
src/: cli.rs  ip.rs  lib.rs  main.rs
tests/: cli.rs
