[package]
name = "dns-rebinder"
authors = ["sinderella"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
hex = "0.4.3"
log = "0.4.17"
rand = "0.8.5"
trust-dns-proto = "0.21.2"
