[package]
name = "dns-rebinder"
version = "0.2.3"
repository = "https://github.com/Sinderella/dns-rebinder"
readme = "README.md"
authors = ["sinderella"]
description = "A dns server for testing DNS rebinding attack"
keywords = ["DNS", "dns-rebind", "pentest", "penetration-test"]
categories = ["development-tools::testing", "network-programming"]
license = "MIT"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "dns-rebinder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
env_logger = "0.9.0"
governor = "0.4.2"
hex = "0.4.3"
log = "0.4.17"
nonzero_ext = "0.3.0"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
trust-dns-proto = "0.21.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
